--- a/SmartHome.fr/styles/style.css
+++ b/SmartHome.fr/styles/style.css
@@ -1,8 +1,3 @@
-:root {
-    --pastel-yellow: #ffe066;
-    --pastel-orange: #ffb266;
-    --pastel-green: #7be495;
-}
 #modal-product-name {
     display: inline-block;
     max-width: 180px;
@@ -17,6 +12,9 @@
     --midnight-green: #07393c;
     --caribbean-current: #2c666e;
     --dark-gray: #1E1E1E;
+    --pastel-yellow: #ffe066;
+    --pastel-indigo: #9591FF;
+    --pastel-green: #7be495;
 }
 
 .carousel-thumbnails, #modal-thumbnails {
@@ -266,7 +264,7 @@ button:disabled {
 }
 .top-bar-item#satisfaction-guarantee {
     background: none !important;
-    color: var(--pastel-orange);
+    color: var(--pastel-indigo);
 }
 .top-bar-item#phone-contact {
     background: none !important;
@@ -511,7 +509,6 @@ button:disabled {
 
 .product-detail-info .price-container {
     font-size: 1.5rem;
-    margin-bottom: 1.5rem;
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -531,7 +528,6 @@ button:disabled {
     padding: 1rem 2rem;
     font-size: 1.1rem;
 }
-
 
 
 .products-layout {
@@ -653,7 +649,7 @@ button:disabled {
 }
 
 .product-info {
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem;
 }
 
 .product-title {
@@ -679,7 +675,6 @@ button:disabled {
     display: flex;
     align-items: baseline;
     gap: 0.75rem;
-    margin-bottom: 1rem;
 }
 
 .product-price {
